--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
     </style>
   </head>
   <body>
-    <div class="container-lg px-3 my-5 markdown-body">
+    <div class="container-lg px-3 my-5 markdown-body" style="max-width: 1200px; margin: 0 auto; padding: 20px 40px;">
       {% if site.title and site.title != page.title %}
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
       {% endif %}
